# python-project-lvl3

./: .coverage  .coveragerc  .gitignore  .travis.yaml  .travis.yml  Makefile  README.md  coverage.xml  nv.html  pyproject.toml  setup.cfg  sfdf
.github/workflows/: build.yml  lint_n_test.yaml  lint_n_test.yml
78/: ru-hexlet-io.html
downloads/: kherson-prom-ua.html  ru-hexlet-io.html
downloads/kherson-prom-ua_files/: cloud-cgi-static-gotcha-gotcha-min.js  cloud-cgi-static-power-solve.js  cloud-cgi-static-uaprom-static-css-main-hced95e5e3eeaf1e687164d8360e3f214a.css  cloud-cgi-static-uaprom-static-css-portal-cart-hcbe930a62d7447f10488451e599d87330.css  cloud-cgi-static-uaprom-static-css-portal-common-hcb4b5305455538d33eb2ee543a830c242.css  cloud-cgi-static-uaprom-static-css-portal-hcc5c04303c41b6d37a91f185e4c7964c1.css  cloud-cgi-static-uaprom-static-image-portal-icons-manifest-prom.json  cloud-cgi-static-uaprom-static-js-adv-teasers.js  cloud-cgi-static-uaprom-static-js-build-content-catalog-wp-catalog-007badfd175be746dba2.css  cloud-cgi-static-uaprom-static-js-build-content-catalog-wp-catalog-2d9d87c60c782c54da6e.css  cloud-cgi-static-uaprom-static-js-build-content-catalog-wp-catalog-a6398874d1097ff61d6d.js  cloud-cgi-static-uaprom-static-js-build-content-catalog-wp-catalog-dbcaa1a26e266d30a903.js  (+8 more)
loader/: cli.py  handler.py  logger.py  logging.py  network.py  path.py  storage.py
loader/scripts/: loader.py
nv_files/: manifest.json
page-loader/scripts/: loader.py
page_loader/: download.py  filesystem.py  helpers.py  hyphenate.py  localize.py  logconf.py  logging.yaml  parser.py  path.py  save.py  settings.py  validate_args.py
page_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spl-downloads/: www-nytimes-com.html
tests/: get_data.py  get_fixtures.py  get_test_data.py  test_arg_validation.py  test_cli.py  test_download.py  test_filesystem.py  test_handler.py  test_helpers.py  test_hyphanate.py  test_loader.py  test_localize.py  test_network.py  test_page_loader.py  test_params.py  test_parser.py  test_path.py  test_save.py  test_storage.py  test_validate_args.py
(+50 files in other folders)
