[tool.poetry]
name = "stepanenko-page-loader"
version = "0.1.19"
description = "Tool for downloading web pages to the local machine"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.0"
beautifulsoup4 = "^4.8.2"
pytest-mock = "^3.1.0"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pyfakefs = "^4.0.2"
rope = "^0.17.0"

[tool.poetry.scripts]
stepanenko-page-loader = 'page_loader.scripts.loader:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
