[tool.poetry]
name = "pload"
version = "0.1.28"
description = "Tool for downloading web pages to the local machine"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]
packages = [
    { include = "loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.0"
beautifulsoup4 = "^4.8.2"
progress = "^1.5"
tqdm = "^4.51.0"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
rope = "^0.17.0"
pytest-mock = "^3.3.1"
isort = "<5"

[tool.poetry.scripts]
pload = 'loader.scripts.loader:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
